# turtlelight-circuit-dev

./: .gitignore  main.py  pyproject.toml
eocircuit/: README.md  pyproject.toml
eocircuit/src/eocircuit/: __init__.py
eocircuit/src/eocircuit/core/: __init__.py  component.py  connection.py  network.py  types.py
eocircuit/src/eocircuit/elec/: __init__.py  basic.py  f_dependent.py  sources.py  subcircuit.py
eocircuit/src/eocircuit/eo/: __init__.py  modulator.py  pd.py
eocircuit/src/eocircuit/photonics/: __init__.py  dc.py  mrr.py  mzi.py  waveguide.py
eocircuit/src/eocircuit/solvers/: __init__.py  hybrid.py  mna.py  s_param.py
eocircuit/src/eocircuit/utils/: __init__.py
eocircuit/tests/: __init__.py  conftest.py  test_component.py  test_connection.py  test_core_types.py  test_dc.py  test_elec_basic.py  test_elec_f_dependent.py  test_elec_sources.py  test_hybrid_solver.py  test_mna_solver.py  test_modulator.py  test_mrr.py  test_mzi.py  test_network.py  test_pd.py  test_s_param_solver.py  test_subcircuit.py  test_waveguide.py
old/: README.md
old/circuit/: __init__.py
old/circuit/core/: __init__.py  circuit.py  graph.py  solver.py  sparam.py
old/circuit/test/: test_core.py  test_graph.py  test_lib.py  test_solver.py  test_sparam.py
old/notebooks/: microring_example.ipynb  mzi_example.ipynb
old/phntwk/: __init__.py
old/phntwk/active/: phasepn.py
old/phntwk/core/: __init__.py  helper.py
old/phntwk/passive/: abstract.py
old/phntwk/utils/: __init__.py  align_x.py  math.py  spectrum.py  utils.py
old/tutorial/: index.md
(+47 files in other folders)
