[project]
name = 'eocircuit'
version = '0.1.0'
description = 'Electro-optic circuit simulation and analysis framework'
readme = 'README.md'
authors = [
    { name = 'Erwen Li', email = 'erwen.li@innolight.com' }
]
requires-python = '>=3.12'
dependencies = [
    'numpy',
    'pydantic>=2.0',
    'scikit-rf',
    'loguru',
]

[project.optional-dependencies]
dev = [
    'pytest',
]

[build-system]
requires = ['uv_build>=0.10.9,<0.11.0']
build-backend = 'uv_build'
